# remote_control_mobile

./: CMakeLists  CMakeLists.txt  README.md  package.xml
launch/: server.launch
scripts/: client.py  client_mobile.py  server.py  server_test.py
